--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,10 @@ target_include_directories(img_lib_wasm PUBLIC "${CMAKE_SOURCE_DIR}/wasm_readabl
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     add_compile_options(-fpic -shared -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-comment)
-    add_compile_options(-fsanitize=address)
-    add_link_options(-fsanitize=address)
-    add_compile_options(-fsanitize=undefined)
-    add_link_options(-fsanitize=undefined)
+#    add_compile_options(-fsanitize=address)
+#    add_link_options(-fsanitize=address)
+#    add_compile_options(-fsanitize=undefined)
+#    add_link_options(-fsanitize=undefined)
 endif()
 
 add_executable(SBX_LIB "${CMAKE_SOURCE_DIR}/sbx_interface_def/Sbx_cpp_interface.cpp")
@@ -36,10 +36,10 @@ target_link_libraries(SBX_LIB img_lib img_lib_wasm)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     add_compile_options(-fpic -shared -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-comment)
-    add_compile_options(-fsanitize=address)
-    add_link_options(-fsanitize=address)
-    add_compile_options(-fsanitize=undefined)
-    add_link_options(-fsanitize=undefined)
+#    add_compile_options(-fsanitize=address)
+#    add_link_options(-fsanitize=address)
+#    add_compile_options(-fsanitize=undefined)
+#    add_link_options(-fsanitize=undefined)
 endif()
 
 
@@ -48,3 +48,10 @@ target_include_directories(SBX_CON_LIB PUBLIC "${CMAKE_SOURCE_DIR}/rlbox/"
         "${CMAKE_SOURCE_DIR}/rlbox/"
         "${CMAKE_SOURCE_DIR}/wasm_readable_definitions")
 target_link_libraries(SBX_CON_LIB img_lib img_lib_wasm)
+
+add_library(con_lib "${CMAKE_SOURCE_DIR}/sbx_interface_def/Sbx_c_connector.cpp" "${CMAKE_SOURCE_DIR}/sbx_interface_def/Sbx_cpp_interface.cpp")
+target_include_directories(con_lib PUBLIC "${CMAKE_SOURCE_DIR}/rlbox/"
+        "${CMAKE_SOURCE_DIR}/rlbox/"
+        "${CMAKE_SOURCE_DIR}/wasm_readable_definitions")
+add_executable(SIMPLE "${CMAKE_SOURCE_DIR}/sbx_interface_def/simple_main.c")
+target_link_libraries(SIMPLE con_lib img_lib img_lib_wasm)
